# pytho3

./: Cargo.toml  README.md  flake.nix  indieweb.example.toml
.github/workflows/: ci.yaml
crates/apps/iwt/: Cargo.toml
crates/apps/iwt/src/: main.rs
crates/apps/iwt/src/app_auth/: mod.rs
crates/apps/iwt/src/app_auth/twitter/: listener.rs  mod.rs
crates/apps/iwt/src/commons/: mod.rs  permashort_link.rs  text.rs  url_shortener.rs
crates/apps/iwt/src/commons/auth/: mod.rs  oauth.rs  token_db.rs
crates/apps/iwt/src/config/: mod.rs
crates/apps/iwt/src/cross_publisher/: README.md  mod.rs  rss.rs  rss_item_ext.rs  syndicate.rs  syndicated_post.rs  target.rs
crates/apps/iwt/src/cross_publisher/mastodon/: mod.rs
crates/apps/iwt/src/cross_publisher/twitter/: mod.rs
crates/apps/iwt/src/social/: mod.rs
crates/apps/iwt/src/stubs/: mod.rs
crates/apps/iwt/src/stubs/auth/: mod.rs  token_db.rs
crates/apps/url_shortener/: Cargo.toml
crates/apps/url_shortener/src/: main.rs
