
[package]
name = "iwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2", features = ["derive"]}
tokio = { version = "1.20.0", features = ["full"] }
log = "0.4"
simple_logger = "2.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
oauth2 = "4.2.3" 
toml = "0.5"

reqwest = {version = "0.11.11", default-features = false, features = ["rustls-tls", "json"]}
rss = "2.0"
futures = "0.3.14"

axum = "0.5.13"
base64 = "0.13.0"
rand = {version = "0.8.5", features = [ "getrandom" ]}
url = "2.2.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }

async-mutex = "1.4.0"
async-trait = "0.1.56"
urlencoding = "2.1.2"

scraper = "0.13.0"
