
[package]
name = "iwt-url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
axum = "0.5.13"
rusqlite = { version = "0.28.0", features = ["bundled"] }
tokio-rusqlite = "0.3.0"
rand = "0.8.5"